--- a/.squash.yml
+++ b/.squash.yml
@@ -6,6 +6,8 @@ deployments:
       ./
     port_forwarding:
       80:3000
+    auto_deploy_on_commits:
+      true
     depends_on:
       - SALES_API:
           app: api-sales/master
