--- a/.squash.yml
+++ b/.squash.yml
@@ -1,1 +1,31 @@
+  
+deployments:
+  MyApp:
+    filename:
+      ./Dockerfile
+    context_path:
+      ./
+    port_forwarding:
+      80:3000 
+    auto_deploy_on_commits:
+      true
 
+  xMyApp:
+    filename:
+      ./Dockerfile
+    context_path:
+      ./
+    port_forwarding:
+      80:3000 
+    auto_deploy_on_commits:
+      true
+
+  aMyApp:
+    filename:
+      ./Dockerfile
+    context_path:
+      ./
+    port_forwarding:
+      80:3000 
+    auto_deploy_on_commits:
+      true
