--- a/.squash.yml
+++ b/.squash.yml
@@ -1,4 +1,3 @@
-  
 deployments:
   MyApp:
     filename:
@@ -21,6 +20,36 @@ deployments:
       true
 
   aMyApp:
+    filename:
+      ./Dockerfile
+    context_path:
+      ./
+    port_forwarding:
+      80:3000 
+    auto_deploy_on_commits:
+      true
+
+  sMyApp:
+    filename:
+      ./Dockerfile
+    context_path:
+      ./
+    port_forwarding:
+      80:3000 
+    auto_deploy_on_commits:
+      true
+
+  bMyApp:
+    filename:
+      ./Dockerfile
+    context_path:
+      ./
+    port_forwarding:
+      80:3000 
+    auto_deploy_on_commits:
+      true
+
+  nMyApp:
     filename:
       ./Dockerfile
     context_path:
